  Das Unterbinden dieses Abrufs gilt bislang noch NICHT FÜR DIE cronjob.php
- Es können nun auch die Badges der eigenen CPID von FreeDC angezeigt werden, sofern die cpid in der Tabelle "boinc_user" eingetragen und die Option aktiviert ist.
- Ein Link zur Projekt-Homepage wurde aus der Übersichts-Tabelle entfernt und ist nun nur noch über die Projekt-Detail-Ansicht verfügbar.

geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
  - ../changelog.txt
  - ../cronjob/cronjob.php
  - ./assets/css/userstats_layout.css
  - ./assets/js/moment/moment-timezone-with-data-2012-2022.js
  - ./assets/js/moment/moment-with-locales.min.js
  - ./lang/de.txt.php
  - ./lang/de.datatables.json
  - ./lang/en.txt.php
  - ./lang/de.datatables.json
  - ./settings/settings.php
  - ajax_pending.php
  - ajax_wcg_detail.php
  - check_update.php
  - error.php
  - header.php
  - index.php
  - nav.php
  - pendings.php
  - project.php
  - tasks.php
  - version.php (erst mit Release)




Version 5.1.1: 
==============
- Es wurde ein Fehler beim Anzeigen der Error-Seiten behoben. Nun sollten auch die richtigen Meldungen erscheinen, sofern ein falscher Link direkt aufgerufen werden sollte
- Das Link für weitere Infos in der Navbar wurde nun besser positioniert
- Der Link zu den SG-Stats wurde aktualisiert
- Je nach Projekt-Status werden in den Projekt-Details nun mehr oder weniger Angaben zu den errechneten Punkten ausgegeben.


geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
    - ../changelog.txt
    - ./settings/settings.php
    - ./assets/css/userstats_layout.css
    - error.php
    - index.php
    - project.php
    - nav.php
    - project.php
    - version.php



Version 5.1.0: 
==============
- Das Error-Management für neue Nutzer der BOINC-Userstats wurde verbessert (Issue #21)
  Sofern noch keine Änderungen an den Credits bei den Projekten vorhanden waren, wurde lediglich der Header und Footer angezeigt.